# vim-global

./: Cargo.toml  README.md
src/: lib.rs  main.rs  xorg.rs
src/input/: mod.rs  xorg.rs
src/xorg/: error.rs  mod.rs
