[package]
name = "vim-global"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
x11 = { version = "2.21.0", features = ["xlib", "xtest"] }
